<resources>
    <string name="app_name">Puncty</string>
    <string name="login">Anmelden</string>
    <string name="register">Registrieren</string>
    <string name="create_meetup_plain">Treffen erstellen</string>
    <string name="create_meetup_emotes">Treffen erstellen 👥⚙</string>
    <string name="view_meetups">Geplante Treffen 🔎📓</string>
    <string name="create_button">erstellen</string>
    <string name="location_hint">Ort</string>
    <string name="day_hint">Tag</string>
    <string name="moth_hint">Monat</string>
    <string name="hour_hint">Stunde</string>
    <string name="minute_hint">Minute</string>
    <string name="username">Nutzername</string>
    <string name="date_hint">Datum</string>
    <string name="time_hint">Uhrzeit</string>
    <string name="email_address">Email</string>
    <string name="password">Passwort</string>
    <string name="confirm_password">Passwort bestätigen</string>
    <string name="leave">Verlassen</string>
    <string name="edit">Bearbeiten</string>
    <string name="invite">Einladen</string>
    <string name="delete">Löschen</string>
</resources>