<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewMeetupActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/fullsizeMeetupCardView"
        android:layout_width="404dp"
        android:layout_height="0dp"
        android:scaleX=".9"
        android:scaleY=".95"
        app:cardBackgroundColor="#aaa"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/meetupLocationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30sp"
                android:paddingTop="30sp"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                tools:text="Location" />

            <TextView
                android:id="@+id/meetupMembersTextView"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:textColor="#EEE"
                android:textSize="24sp"
                tools:text="Members" />

            <TextView
                android:id="@+id/meetupTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30sp"
                android:paddingTop="30sp"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                tools:text="HH:MM" />

            <TextView
                android:id="@+id/meetupDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30sp"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                tools:text="DD. MONTH" />

            <Button
                android:id="@+id/meetupInviteButton"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:backgroundTint="#3BCD13"
                android:text="@string/invite" />

            <Button
                android:id="@+id/meetupLeaveButton"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#131DCD"
                android:text="@string/leave" />

            <Button
                android:id="@+id/meetupEditButton"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#CDAE13"
                android:text="@string/edit" />

            <Button
                android:id="@+id/meetupDeleteButton"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#CD1313"
                android:text="@string/delete" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>